Add person to the board and render board staff

--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
 
     <section class="content">
       <h2 class="headline">Active Board</h2>
+      <div class="board-actions box hidden" id="board-actions">
+        <button class="btn btn-danger" id="close-board">Close board</button>
+        <button class="btn btn-success" id="add-person">Add person</button>
+      </div>
       <div class="active-board-wrapper" id="active-board-wrapper">
         <div class="board-wrapper box" id="board-wrapper">
           <span>No board selected</span>
         </div>
-        <div class="board-actions box">
-          <p>ad</p>
-          <p>ad</p>
-          <p>ad</p>
-        </div>
+        <div class="board-staff box" id="board-staff"></div>
       </div>
     </section>
 
