Added support board and id checking for staff adding

--- a/index.html
+++ b/index.html
@@ -20,10 +20,18 @@
         <button class="btn btn-success" id="add-person">Add person</button>
       </div>
       <div class="active-board-wrapper" id="active-board-wrapper">
-        <div class="board-wrapper box" id="board-wrapper">
-          <span>No board selected</span>
+        <div class="board-main box">
+          <h4 id="main-board-header">No board selected</h4>
+          <div id="main-board-content"></div>
         </div>
-        <div class="board-staff box" id="board-staff"></div>
+        <div class="board-support box">
+          <h4 id="support-board-header">Support</h4>
+          <div id="support-board-content"></div>
+        </div>
+        <div class="board-staff box">
+          <h4 id="staff-board-header">Active staff</h4>
+          <div class="content" id="staff-board-content"></div>
+        </div>
       </div>
     </section>
 
