Moved board rendering to js to support dynamic cell slugs

--- a/index.html
+++ b/index.html
@@ -14,25 +14,7 @@
     </section>
 
     <section class="content">
-      <h2 class="headline">Active Board</h2>
-      <div class="board-actions box hidden" id="board-actions">
-        <button class="btn btn-danger" id="close-board">Close board</button>
-        <button class="btn btn-success" id="add-person">Add person</button>
-      </div>
-      <div class="active-board-wrapper" id="active-board-wrapper">
-        <div class="board-main box">
-          <h4 id="main-board-header">No board selected</h4>
-          <div id="main-board-content"></div>
-        </div>
-        <div class="board-support box">
-          <h4 id="support-board-header">Support</h4>
-          <div id="support-board-content"></div>
-        </div>
-        <div class="board-staff box">
-          <h4 id="staff-board-header">Active staff</h4>
-          <div class="content" id="staff-board-content"></div>
-        </div>
-      </div>
+      <div id="active-board-wrapper"></div>
     </section>
 
     <script src="./js/data.js"></script>
